Fixing 1px gap between sequencer playback head and orange guide line

--- a/sass/jssynth.scss
+++ b/sass/jssynth.scss
@@ -256,7 +256,7 @@ input[type='range'].sequencer-playback-header::-ms-thumb:active {
 
 .sequencer-playback-line {
   position: absolute;
-  top: 3.0rem;
+  top: calc(3.0rem - 1px);
   bottom: 0;
   width: 5px;
   background: $orange;
